--- a/Resources/HeadlessServerLauncher.rc
+++ b/Resources/HeadlessServerLauncher.rc
@@ -14,6 +14,8 @@ BEGIN
 	BEGIN
 		BLOCK "040904E4"
 		BEGIN
+			VALUE "CompanyName",      "Crytek GmbH"
+			VALUE "LegalCopyright",   "(C) 2007 Crytek GmbH"
 			VALUE "ProductName",      "C1-Launcher"
 			VALUE "ProductVersion",   PROJECT_VERSION_STRING
 			VALUE "FileVersion",      PROJECT_VERSION_STRING
