#22: Enable new CPU detection in all launchers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ add_library(LauncherBase STATIC
 	Code/CryCommon/CrySystem/ISystem.cpp
 	Code/CryCommon/CrySystem/ISystem.h
 	Code/CryCommon/CrySystem/IValidator.h
+	Code/Launcher/CPUInfo.cpp
+	Code/Launcher/CPUInfo.h
 	Code/Launcher/LauncherCommon.cpp
 	Code/Launcher/LauncherCommon.h
 	Code/Launcher/MemoryPatch.cpp
@@ -96,8 +98,6 @@ add_executable(CrysisDedicatedServer WIN32
 )
 
 add_executable(CrysisHeadlessServer
-	Code/Launcher/HeadlessServer/CPUInfo.cpp
-	Code/Launcher/HeadlessServer/CPUInfo.h
 	Code/Launcher/HeadlessServer/HeadlessServerLauncher.cpp
 	Code/Launcher/HeadlessServer/HeadlessServerLauncher.h
 	Code/Launcher/HeadlessServer/Logger.cpp
