--- a/Project.h.in
+++ b/Project.h.in
@@ -8,9 +8,8 @@
 #pragma once
 
 #define PROJECT_VERSION @PROJECT_VERSION_MAJOR@
-#define PROJECT_VERSION_STRING "@PROJECT_VERSION_MAJOR@"
-
-#define PROJECT_VERSION_DETAILS "@VERSION_DETAILS@"
+#define PROJECT_VERSION_STRING "v@PROJECT_VERSION_MAJOR@"
+#define PROJECT_BUILD_BITS "@BUILD_BITS@-bit"
 
 // contains launcher name and version details
 // defined in Main.cpp of each launcher
