Logger: Use std::FILE and remove problematic message appending

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_library(LauncherBase STATIC
 	Code/Library/OS.h
 	Code/Library/PathTools.cpp
 	Code/Library/PathTools.h
+	Code/Library/StdFile.h
 	Code/Library/StringTools.cpp
 	Code/Library/StringTools.h
 	Code/Library/StringView.cpp
