--- a/Project.h.in
+++ b/Project.h.in
@@ -11,6 +11,6 @@
 #define PROJECT_VERSION_STRING "v@PROJECT_VERSION_MAJOR@"
 #define PROJECT_BUILD_BITS "@BUILD_BITS@-bit"
 
-// contains launcher name and version details
+// contains launcher name and version
 // defined in Main.cpp of each launcher
 extern const char* const PROJECT_BANNER;
