--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,20 +24,20 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Prepare
-        uses: microsoft/setup-msbuild@v1.1
+        uses: ilammy/msvc-dev-cmd@v1
         with:
-          msbuild-architecture: ${{ inputs.arch }}
+          arch: ${{ inputs.arch }}
 
       - name: Configure
-        run: cmake -S . -B Build -A $(if ('${{ inputs.arch }}' -eq 'x86') { 'Win32' } else { '${{ inputs.arch }}' })
+        run: cmake -S . -B Build -G "NMake Makefiles" -D CMAKE_BUILD_TYPE=${{ inputs.type }}
 
       - name: Build
-        run: cmake --build Build --config ${{ inputs.type }}
+        run: cmake --build Build
 
       - name: Upload
         uses: actions/upload-artifact@v3
         with:
           name: c1-launcher-${{ inputs.arch }}
           path: |
-            ${{ github.workspace }}\Build\${{ inputs.type }}\*.exe
-            ${{ github.workspace }}\Build\${{ inputs.type }}\*.pdb
+            ${{ github.workspace }}\Build\*.exe
+            ${{ github.workspace }}\Build\*.pdb
