--- a/Resources/CrysisWarhead.rc
+++ b/Resources/CrysisWarhead.rc
@@ -1,11 +1,17 @@
-// Dedicated server launcher resources
+// Crysis Warhead launcher resources
 
 #include <winver.h>
 
-#include "Launcher/DedicatedServer/Resources.h"
+#include "Launcher/Game/Resources.h"
 #include "Project.h"
 
-RESOURCE_ICON ICON "DedicatedServerIcon.ico"
+RESOURCE_ICON ICON "CrysisWarhead.ico"
+
+RESOURCE_CURSOR_AMBER CURSOR "CursorAmber.cur"
+RESOURCE_CURSOR_BLUE  CURSOR "CursorBlue.cur"
+RESOURCE_CURSOR_GREEN CURSOR "CursorGreen.cur"
+RESOURCE_CURSOR_RED   CURSOR "CursorRed.cur"
+RESOURCE_CURSOR_WHITE CURSOR "CursorWhite.cur"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     PROJECT_VERSION, 0, 0, 0
@@ -22,9 +28,9 @@ BEGIN
 			VALUE "ProductName",      "C1-Launcher"
 			VALUE "ProductVersion",   PROJECT_VERSION_STRING
 			VALUE "FileVersion",      PROJECT_VERSION_STRING
-			VALUE "FileDescription",  "Crysis Dedicated Server"
-			VALUE "InternalName",     "CrysisDedicatedServer"
-			VALUE "OriginalFilename", "CrysisDedicatedServer.exe"
+			VALUE "FileDescription",  "Crysis Warhead"
+			VALUE "InternalName",     "CrysisWarheadLauncher"
+			VALUE "OriginalFilename", "CrysisWarheadLauncher.exe"
 		END
 	END
 
