Add build job with VS2005 compiler

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Configure
         run: cmake -S . -B Build -G "NMake Makefiles" -D CMAKE_BUILD_TYPE=${{ inputs.type }}
         env:
-          CXXFLAGS: /W4 /WX /wd4100
+          CXXFLAGS: /W4 /WX
 
       - name: Build
         run: cmake --build Build
@@ -39,9 +39,34 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
-          name: c1-launcher-${{ inputs.arch }}-${{ github.sha }}
+          name: c1-launcher-${{ inputs.arch }}-${{ github.ref_name }}-${{ github.sha }}
           path: |
             ${{ github.workspace }}\Build\*.exe
             ${{ github.workspace }}\Build\*.pdb
             ${{ github.workspace }}\Build\Wars\*.exe
             ${{ github.workspace }}\Build\Wars\*.pdb
+
+  msvc_vs2005:
+    runs-on: ubuntu-latest
+    container: ghcr.io/${{ github.repository }}/wine-msvc-vs2005
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Configure
+        run: wine cmd /C "C:/SetEnv_${{ inputs.arch }}.bat && cmake -S . -B Build -D CMAKE_BUILD_TYPE=${{ inputs.type }}"
+        env:
+          CXXFLAGS: /W4 /WX
+
+      - name: Build
+        run: wine cmd /C "C:/SetEnv_${{ inputs.arch }}.bat && cmake --build Build"
+
+      - name: Upload
+        uses: actions/upload-artifact@v4
+        with:
+          name: c1-launcher-${{ inputs.arch }}-vs2005-${{ github.ref_name }}-${{ github.sha }}
+          path: |
+            ${{ github.workspace }}/Build/*.exe
+            ${{ github.workspace }}/Build/*.pdb
+            ${{ github.workspace }}/Build/Wars/*.exe
+            ${{ github.workspace }}/Build/Wars/*.pdb
