--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ on:
         type: string
 
 jobs:
-  msvc_latest:
+  msvc_vs2022:
     runs-on: windows-latest
     steps:
       - name: Checkout
