--- a/Resources/DedicatedServer.rc
+++ b/Resources/DedicatedServer.rc
@@ -2,10 +2,9 @@
 
 #include <winver.h>
 
-#include "Launcher/DedicatedServer/Resources.h"
 #include "Project.h"
 
-RESOURCE_ICON ICON "DedicatedServer.ico"
+101 ICON "DedicatedServer.ico"
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION     PROJECT_VERSION, 0, 0, 0
