--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,13 +1,14 @@
 ################################################################################
-# Push workflow running on a push to any branch
+# Developer workflow running on pushes to the master branch and pull requests
 ################################################################################
 
-name: Push
+name: Dev
 
 on:
   push:
     branches:
-      - '**'
+      - master
+  pull_request:
 
 jobs:
   build_x86:
