--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,12 @@ jobs:
           cmake -S . -B Build -G "NMake Makefiles" -D CMAKE_BUILD_TYPE=${{ inputs.type }}
           cmake --build Build
 
+      - name: Test
+        run: |
+          & 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\Launch-VsDevShell.ps1' `
+            -SkipAutomaticLocation -Arch ${{ inputs.arch == 'x64' && 'amd64' || inputs.arch }}
+          cmake --build Build --target test
+
       - name: Upload
         uses: actions/upload-artifact@v4
         with:
@@ -57,6 +63,9 @@ jobs:
         run: |
           wine cmd /C "C:/SetEnv_${{ inputs.arch }}.bat && cmake -S . -B Build -D CMAKE_BUILD_TYPE=${{ inputs.type }}"
           wine cmd /C "C:/SetEnv_${{ inputs.arch }}.bat && cmake --build Build"
+
+      - name: Test
+        run: wine cmd /C "C:/SetEnv_${{ inputs.arch }}.bat && cmake --build Build --target test"
 
       - name: Upload
         uses: actions/upload-artifact@v4
